--- a/slides/2025_gw_oscon/index.qmd
+++ b/slides/2025_gw_oscon/index.qmd
@@ -491,7 +491,7 @@ Data saved locally in csv for previewing purposes.
 ### Deploy {style="font-size: 36px; color: #739C69; padding-top: 1em;"}
 
 ::: {style="text-align: left;"}
-- Recommend [**shinyapps.io**](https://www.shinyapps.io):
+- Recommend [**shinyapps.io**](https://www.shinyapps.io) (Free):
 
   ```{r}
   #| eval: false
