--- a/slides/2025_gw_oscon_lightning/index.qmd
+++ b/slides/2025_gw_oscon_lightning/index.qmd
@@ -113,7 +113,7 @@ Check out [**surveydown.org**](https://surveydown.org) for more details!
 
 ## Run & Deploy {style="text-align: center;"}
 
-{{< video https://www.youtube.com/watch?v=mwkoQCWy1o0 width="100%" height="520" >}}
+![](videos/local_run.mp4){style="border: 2px solid #5654A2;"}
 
 ```{r}
 #| eval: false
@@ -124,4 +124,6 @@ rsconnect::deployApp(appName = "my_survey")
 
 ## Local Dashboard App {style="text-align: center;"}
 
-{{< video https://www.youtube.com/watch?v=EmQKUcVkRPU width="100%" height="580" >}}
+![](videos/dashboard.mp4){style="border: 2px solid #5654A2;"}
+
+## [Check out [**`surveydown.org`**](https://surveydown.org) for more!]{style="text-align: center; display: block;"} {.center}
